[package]
name = "sonic262"
version = "0.1.0"
authors = ["Ujjwal Sharma <ryzokuken@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
serde_yaml = "0.8.13"
tempfile = "3.1.0"
colored = "2.0.0"
walkdir = "2.3.1"
anyhow = "1.0.33"
