[package]
name = "sonic262"
version = "0.1.0"
authors = ["Ujjwal Sharma <ryzokuken@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
yaml-rust = "0.4"
clap = "3.0.0-beta.2"
tempfile = "3"
colored = "2.0.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "full"
harness = false
